; ModuleID = '/home/carl/AnghaBench/postgres/contrib/bloom/extr_blutils.c_myRand.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/bloom/extr_blutils.c_myRand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@next = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @myRand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @myRand() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = load i32, i32* @next, align 4
  %5 = sdiv i32 %4, 127773
  store i32 %5, i32* %1, align 4
  %6 = load i32, i32* @next, align 4
  %7 = srem i32 %6, 127773
  store i32 %7, i32* %2, align 4
  %8 = load i32, i32* %2, align 4
  %9 = mul nsw i32 16807, %8
  %10 = load i32, i32* %1, align 4
  %11 = mul nsw i32 2836, %10
  %12 = sub nsw i32 %9, %11
  store i32 %12, i32* %3, align 4
  %13 = load i32, i32* %3, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %0
  %16 = load i32, i32* %3, align 4
  %17 = add nsw i32 %16, 2147483647
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %15, %0
  %19 = load i32, i32* %3, align 4
  store i32 %19, i32* @next, align 4
  %20 = load i32, i32* %3, align 4
  %21 = sub nsw i32 %20, 1
  ret i32 %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
